--- a/app/src/main/res/layout/fragment_total_report.xml
+++ b/app/src/main/res/layout/fragment_total_report.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".ui.chart.total.TotalReportFragment">
 
 
@@ -56,6 +57,7 @@
         android:paddingBottom="10dp"
         android:text="@string/total_income"
         android:textSize="15sp"
+        android:textColor="@color/colorText"
         app:layout_constraintEnd_toStartOf="@+id/tvIncome"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -67,14 +69,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingStart="0dp"
+        android:paddingStart="5dp"
         android:paddingTop="10dp"
-        android:paddingEnd="20dp"
         android:paddingBottom="10dp"
-        android:text="$300.00"
         android:textColor="@color/colorText"
         android:textSize="15sp"
         android:textStyle="bold"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="@id/guidelineVerticalReportEnd"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvIncomeTitle"
@@ -91,6 +92,7 @@
         android:paddingBottom="10dp"
         android:text="@string/total_expense"
         android:textSize="15sp"
+        android:textColor="@color/colorText"
         app:layout_constraintEnd_toStartOf="@+id/tvExpense"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -102,14 +104,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingStart="0dp"
+        android:paddingStart="5dp"
         android:paddingTop="10dp"
-        android:paddingEnd="20dp"
         android:paddingBottom="10dp"
-        android:text="$300.00"
         android:textColor="@color/colorText"
         android:textSize="15sp"
         android:textStyle="bold"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="@id/guidelineVerticalReportEnd"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvExpensesTitle"
