--- a/app/src/main/res/layout/fragment_date_wise_chart.xml
+++ b/app/src/main/res/layout/fragment_date_wise_chart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.chart.monthly.DateWiseChartFragment">
+    tools:context=".ui.monthly.DateWiseChartFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:layout_width="0dp"
